src/app/main/defaultUser/home/home.component.scss
$primary: #B88E2F;
$secondary: #FFF3E3;
$gray: #666;
$secondaryGray: #3A3A3A;
$gray-2: #616161;
$transitionDuration: 0.3s;

section.row {


    &.discover {
        background-image: url(/assets/images/scandinavian-interior-mockup.png);
        background-position: center;
        background-size: cover;
        display: flex;
        align-items: center;
        justify-content: flex-end;
        padding-right: 58px;
        height: 716px;

        .box {
            max-width: 643px;
            max-height: 443px;
            padding: 62px 43px 37px 39px;
            background-color: $secondary;
            border-radius: 8px;

            p {
                font-weight: 600;
                letter-spacing: 3px;

                &.description {
                    margin-top: 17px;
                    font-weight: 500;
                    font-size: 18px;
                    letter-spacing: normal;
                }
            }

            h1 {
                margin: 0px;
                font-family: Poppins-Bold;
                color: $primary;
                font-size: 52px;
                font-weight: 700;
                line-height: 65px;
            }

            .button {
                margin-top: 46px;

                display: flex;
                align-items: center;
                justify-content: center;
                width: 223px;
                height: 74px;
                background-color: $primary;

                color: #FFF;
                font-family: Poppins;
                font-size: 16px;
                font-style: normal;
                font-weight: 700;
            }
        }

    }

    &.browseRange {
        margin-top: 56px;
        display: flex;
        flex-direction: column;
        align-items: center;

        .items {
            margin-top: 48px;
            display: flex;
            flex-direction: row;

            a {
                margin-left: 20px;

                &:first-child {
                    margin-left: 0px;
                }
            }

            .item {
                display: flex;
                flex-direction: column;
                align-items: center;

                &:hover {
                    .imgWrapper {
                        filter: brightness(70%)
                    }
                }

                .imgWrapper {
                    position: relative;
                    width: 380px;
                    height: 480px;
                    border-radius: 8px;
                    overflow: hidden;
                    transition-duration: $transitionDuration;

                    img {
                        width: 100%;
                        height: 100%;
                        object-fit: cover;
                    }
                }

                p {
                    margin: 0px;
                    margin-top: 20px;
                    font-size: 24px;
                    font-style: normal;
                    font-weight: 600;
                }
            }


        }
    }

    &.productList {
        margin-top: 56px;
        display: flex;
        flex-direction: column;
        align-items: center;

        .title1 {
            color: $secondaryGray;
            margin: 0px;
            margin-bottom: 32px;
        }

        .button {
            margin-top: 32px;
            width: 245px;
            height: 48px;
            border: 1px solid $primary;
            color: $primary;
            display: flex;
            justify-content: center;
            align-items: center;
            font-size: 16px;
            font-weight: 600;
        }
    }

    &.inspiration {
        display: flex;
        flex-direction: row;
        align-items: center;
        justify-content: center;
        margin-top: 113px;

        .titleSide {
            width: 422px;
            margin-right: 42px;
        }

        .title1 {
            margin: 0px;
            text-align: left;
            color: $secondaryGray;
        }

        .subtitle {
            margin-top: 7px;
            margin: 0px;
            font-size: 16px;
            font-weight: 500;
            line-height: 150%;
        }

        .button {
            margin-top: 25px;
            display: flex;
            align-items: center;
            justify-content: center;
            width: 176px;
            height: 48px;
            background-color: $primary;
            color: white;
        }
    }

    &.hashtag {
        margin-top: 111px;
        margin-bottom: 50px;
        .subtitle {
            font-size: 20px;
            font-style: normal;
            font-weight: 600;
            color: $gray-2;
            text-align: center;
            margin: 0px;
        }
        .title1{
            margin: 0;
            margin-bottom: -20px;
        }
        .collage{
            display: flex;
            flex-direction: column;
            align-items: center;
            >.row{
                align-items: center;
                margin: 0;
            }
            .row{
                display: flex;
                flex-direction: row;
                &.top{
                    align-items: flex-end;
                }
                &.bottom{
                    align-items: flex-start;
                }
            }
            .col{
                display: flex;
                flex-direction: column;
            }
            img{
                object-fit: cover;
                margin: 8px;
            }
        }
    }
   
    .title1 {
        font-family: Poppins-Bold;
        font-size: 40px;
        font-weight: 700;
        line-height: 120%;
        text-align: center;
    }

    .title2 {
        margin: 0px;
        font-family: Poppins-Bold;
        font-size: 32px;
        font-weight: 700;
        line-height: 120%;
    }

    .subtitle {
        font-size: 20px;
        font-style: normal;
        font-weight: 400;
        color: $gray;
    }


}

